# proyecto_prueba

./: .claudeignore  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: ejemplo.md
src/: __init__.py
