[project]
name = "mi-proyecto"
version = "0.1.0"
description = "Descripción breve del proyecto"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Fran Martínez"}
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
